project/stage/tests/reject/reject_type_assign_2.ul
void main(){
  void thing;
  char blah;

  void = blah;
}